--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -127,8 +127,8 @@
         opacity: 0.1;
     }
     
-    .dropdown-header {
-        color: #0d6efd !important;
+    .navbar-dark .dropdown-header {
+        color: #adb5bd !important;
         font-weight: 600;
     }
 
