--- a/app/static/css/comprehensive-fixes.css
+++ b/app/static/css/comprehensive-fixes.css
@@ -106,7 +106,7 @@
 }
 
 .dropdown-menu .dropdown-item {
-    color: #212529 !important;
+    color: #ffffff !important;
 }
 
 .dropdown-menu .dropdown-item:hover {
