--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,7 @@
     <link href="{{ url_for('static', filename='css/text-contrast-improvements.css') }}?v=20250822" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/comprehensive-fixes.css') }}?v=20250822" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/ultimate-contrast-fix.css') }}?v=20250822" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/master-styling-fixes.css') }}?v=20250823" rel="stylesheet">
     
     <!-- Simple navbar styling -->
     <style>
@@ -452,6 +453,8 @@
     <link href="{{ url_for('static', filename='css/text-contrast-improvements.css') }}" rel="stylesheet">
     <!-- Ultimate Contrast Fix - Final Override -->
     <link href="{{ url_for('static', filename='css/ultimate-contrast-fix.css') }}" rel="stylesheet">
+    <!-- Master Styling Fixes - FINAL OVERRIDE -->
+    <link href="{{ url_for('static', filename='css/master-styling-fixes.css') }}?v=20250823" rel="stylesheet">
     <!-- Responsive Images -->
     <link href="{{ url_for('static', filename='css/responsive-images.css') }}" rel="stylesheet">
     <!-- Favicon -->
