--- a/app/static/css/master-styling-fixes.css
+++ b/app/static/css/master-styling-fixes.css
@@ -15,10 +15,40 @@
     background-image: none !important;
 }
 
-.card-header.bg-primary {
-    background: #222222 !important;
-    background-color: #222222 !important;
-    background-image: none !important;
+/* UNIFIED NAVIGATION STYLING - ALL #333333 */
+.navbar,
+.navbar-nav,
+.dropdown-menu,
+.navbar-brand,
+.nav-link,
+.dropdown-item {
+    background-color: #333333 !important;
+    background: #333333 !important;
+    color: #ffffff !important;
+}
+
+/* Hover states */
+.nav-link:hover,
+.dropdown-item:hover,
+.navbar-brand:hover {
+    background-color: #444444 !important;
+    background: #444444 !important;
+    color: #ffffff !important;
+}
+
+/* Dropdown menu styling */
+.dropdown-menu {
+    border: 1px solid #444444 !important;
+}
+
+.dropdown-menu .dropdown-item {
+    background-color: #333333 !important;
+    color: #ffffff !important;
+}
+
+.dropdown-menu .dropdown-item:hover {
+    background-color: #444444 !important;
+    color: #ffffff !important;
 }
 
 .card-header.bg-dark {
