--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -583,6 +583,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('main.index') }}"><i class="fas fa-home"></i> Hjem</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('main.professional_dashboard') }}">
+                            <i class="fas fa-chart-line"></i> Professional Dashboard
+                        </a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="{{ url_for('stocks.index') }}" role="button" data-bs-toggle="dropdown">
                             <i class="fas fa-chart-bar"></i> Aksjer
