--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -584,7 +584,7 @@
                         <a class="nav-link" href="{{ url_for('main.index') }}"><i class="fas fa-home"></i> Hjem</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('main.professional_dashboard') }}">
+                        <a class="nav-link" href="/professional-dashboard">
                             <i class="fas fa-chart-line"></i> Professional Dashboard
                         </a>
                     </li>
